# 22-5-team5-server

./: .env.local  .env.prod  .gitignore  README.md  Text File.txt  cert.pem  key.pem  nohup.out  pyproject.toml  제목 없는 다이어그램.drawio
.github/workflows/: deploy.yml  main.yml  pr-ci.yml
alembic/: env.py
alembic/versions/: 033bc11fc6ed_login_jwt.py  05fe23ac15db_test.py  11dab42d4f24_edit_blog.py  165f683746a9_resolve_error.py  24ae5cfef10f_initial_migration.py  2577e433c67c_edit_user_and_blog_table.py  26ab8e6fe46f_rename_table_from_like_to_likes.py  2fb62142ccb2_merge_category_and_article.py  3373e0cecfec_merge_category_and_article.py  367a3bde56fd_add_views_column_to_article.py  37940d14ae4b_category_init.py  389f6be7e8b0_initial_migration.py  3bb4258fee55_edit_user_and_blog_table.py  4248d226e7c2_initial.py  45deb2b8f712_edit_user_and_blog_table.py  4d4f02247829_login_jwt.py  5a8ee65c889f_category_init.py  5c762ec28bd2_initial_migration.py  60d69d65c562_edit_user_and_blog_table.py  6633ac2f2485_edit_user_and_blog_table.py  66e134f95f2a_merge_heads.py  6d917caae9a0_resolve_errors.py  7440806423ba_initial_migration.py  7631add232b9_initial_migration.py  78775bb6ca83_edit_user_and_blog_table.py  7f4358c4291b_category_init.py  7fbef35356c2_edit_user_and_blog_table.py  933831dda7d6_initial_migration.py  93b05f01c572_resolve_error.py  9741662cd9a8_initial_migration.py  98be84fb38e8_edit_user_and_blog_table.py  9e79bb7f7327_merge_branches.py  a1faf94085c2_edit_user_and_blog_table.py  (+26 more)
wastory/: .env.local  __init__.py  api.py  main.py  nohup.out  settings.py
(+101 files in other folders)
