[tool.poetry]
name = "22-5-team5-server"
version = "0.1.0"
description = "Wastory Clone project"
authors = ["sanghyun Park <qkrtkdgus39@snu.ac.kr>"]
readme = "README.md"
packages = [{ include = "wastory" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
alembic = "^1.13.3"
email-validator = "^2.2.0"
pydantic-settings = "^2.5.2"
cryptography = "^43.0.1"
aiomysql = "^0.2.0"
pyopenssl = "^24.3.0"
authlib = "^1.4.0"
httpx = "^0.28.1"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
asyncmy = "^0.2.10"
itsdangerous = "^2.2.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"